<resources>
    <string name="app_name">mvvmDemo</string>
    <string name="disagree_and_quit">不同意并退出</string>
    <string name="agree">同意</string>
    <string name="cancel">取消</string>
    <string name="tips_on_user_privacy_protection">用户隐私保护提示</string>
    <string name="shop">商城</string>
    <string name="auction">拍卖</string>
    <string name="fast_auction">快拍</string>
    <string name="exchange">交流</string>
    <string name="my">我的</string>
    <string name="shopping_trolley">购物车</string>
    <string name="all">全部</string>
    <string name="classify">分类</string>
    <string name="rim">周边</string>
    <string name="integral">积分</string>
    <string name="consult">咨询</string>
    <string name="product_picture">产品图片</string>
    <string name="quick_auction">快速竞拍</string>
    <string name="is_the_auction">正在拍卖</string>
    <string name="more">更多</string>
    <string name="closing_time_auction">结拍: 今日 16:00</string>
    <string name="fast_search">快速搜索</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_error_please_try_again">服务器错误!请重试!</string>
    <string name="whether_to_clear_the_search_history">是否清空搜索历史</string>
    <string name="skip">跳过</string>
</resources>